fix: dark mode

--- a/style.css
+++ b/style.css
@@ -2,6 +2,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Playfair:ital,opsz,wght@0,5..1200,300..900;1,5..1200,300..900&display=swap');
 
+@media (prefers-color-scheme: dark), (prefers-color-scheme: light) {
+  :root {
+    --primary-background: #fef5f0;
+    --secondary-background: #ffe9e5;
+    --ternary-background: #ffd6d2;
+    --text-primary: #2f2d5a;
+    --text-secondary: #a4a4a4;
+    --text-ternary: #c6ada6;
+  }
+}
+
 * {
   padding: 0;
   margin: 0;
